--- a/brain/inference.ipynb
+++ b/brain/inference.ipynb
@@ -30,7 +30,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import torch\n",
-    "from brain_solver.preprocessing import preprocess_eeg_data\n",
+    "\n",
+    "from brain_solver import helpers as hp\n",
     "\n",
     "# define the model\n",
     "class NoNa_Resnet(torch.nn.Module):\n",
@@ -84,7 +85,7 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main(data_folder=\"./data/\")\n",
-    "    print(\"All done!\")\n"
+    "    print(\"All done!\")"
    ]
   }
  ],
@@ -104,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
