feat: Test Public Workflow

--- a/brain/luppo_inter.ipynb
+++ b/brain/luppo_inter.ipynb
@@ -351,7 +351,9 @@
     "        if Config.trained_model_path is None\n",
     "        else f\"{Config.trained_model_path}/EffNet_v{Config.VER}_f{i}.ckpt\"\n",
     "    )\n",
-    "    model = tr.Trainer.load_from_checkpoint(ckpt_file, weight_file=Config.trained_weight_file)\n",
+    "    model = tr.Trainer.load_from_checkpoint(\n",
+    "        ckpt_file, weight_file=Config.trained_weight_file\n",
+    "    )\n",
     "    model = model.to(device).eval()\n",
     "    fold_preds = []\n",
     "\n",
