--- a/brain/training.ipynb
+++ b/brain/training.ipynb
@@ -398,7 +398,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = EEGDataset(train_data_preprocessed, spectrograms, data_eeg_spectograms, TARGETS)\n",
+    "dataset = EEGDataset(\n",
+    "    train_data_preprocessed, spectrograms, data_eeg_spectograms, TARGETS\n",
+    ")\n",
     "dataloader = DataLoader(dataset, batch_size=32, shuffle=False)"
    ]
   },
@@ -429,7 +431,9 @@
     }
    ],
    "source": [
-    "hp.Helpers.plot_spectrograms(dataloader, train_data_preprocessed, ROWS=2, COLS=3, BATCHES=2)"
+    "hp.Helpers.plot_spectrograms(\n",
+    "    dataloader, train_data_preprocessed, ROWS=2, COLS=3, BATCHES=2\n",
+    ")"
    ]
   },
   {
@@ -460,7 +464,9 @@
    "outputs": [],
    "source": [
     "model = tr.Trainer(\n",
-    "    Config.trained_weight_file, Config.USE_KAGGLE_SPECTROGRAMS, Config.USE_EEG_SPECTROGRAMS\n",
+    "    Config.trained_weight_file,\n",
+    "    Config.USE_KAGGLE_SPECTROGRAMS,\n",
+    "    Config.USE_EEG_SPECTROGRAMS,\n",
     ")"
    ]
   },
@@ -569,7 +575,7 @@
     "    batch_size_train=32,\n",
     "    batch_size_valid=64,\n",
     "    max_epochs=4,\n",
-    "    num_workers=3\n",
+    "    num_workers=3,\n",
     ")"
    ]
   },
@@ -605,7 +611,9 @@
     "        if Config.trained_model_path is None\n",
     "        else f\"{Config.trained_model_path}/EffNet_v{Config.VER}_f{i}.ckpt\"\n",
     "    )\n",
-    "    model = tr.Trainer.load_from_checkpoint(ckpt_file, weight_file=Config.trained_weight_file)\n",
+    "    model = tr.Trainer.load_from_checkpoint(\n",
+    "        ckpt_file, weight_file=Config.trained_weight_file\n",
+    "    )\n",
     "    model = model.to(device).eval()\n",
     "    with torch.inference_mode():  # Use inference mode for efficiency\n",
     "        for val_batch in valid_loaders[i]:\n",
