feat: Update to get better stats

--- a/brain/luppo_inter.ipynb
+++ b/brain/luppo_inter.ipynb
@@ -66,7 +66,7 @@
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
     "import pytorch_lightning as pl\n",
-    "from brain_solver import Helpers as hp, Trainer as tr, EEGDataset\n",
+    "from brain_solver import Helpers as hp, Trainer as tr, BrainModel as br, EEGDataset\n",
     "\n",
     "# Suppress warnings if desired\n",
     "import warnings\n",
@@ -102,7 +102,7 @@
    "source": [
     "from brain_solver import Config\n",
     "full_path = \"/home/osloup/NoodleNappers/brain/data/\"\n",
-    "config = Config(full_path,  full_path + \"out/\")\n",
+    "config = Config(full_path,  full_path + \"out/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False)\n",
     "\n",
     "# full_path = \"/kaggle/input/\"\n",
     "# config = Config(full_path, \"/kaggle/working/\")\n",
@@ -338,18 +338,17 @@
      "output_type": "stream",
      "text": [
       "#########################\n",
-      "### Testing Fold 1\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "type object 'Trainer' has no attribute 'Trainer'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 17\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m### Testing Fold \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     12\u001b[0m ckpt_file \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEffNet_v\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig\u001b[38;5;241m.\u001b[39mVER\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_f\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.ckpt\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m config\u001b[38;5;241m.\u001b[39mtrained_model_path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig\u001b[38;5;241m.\u001b[39mtrained_model_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/EffNet_v\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mconfig\u001b[38;5;241m.\u001b[39mVER\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_f\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.ckpt\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     16\u001b[0m )\n\u001b[0;32m---> 17\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mtr\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mTrainer\u001b[49m\u001b[38;5;241m.\u001b[39mload_from_checkpoint(\n\u001b[1;32m     18\u001b[0m     ckpt_file, weight_file\u001b[38;5;241m=\u001b[39mconfig\u001b[38;5;241m.\u001b[39mtrained_weight_file\n\u001b[1;32m     19\u001b[0m )\n\u001b[1;32m     20\u001b[0m model \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mto(device)\u001b[38;5;241m.\u001b[39meval()\n\u001b[1;32m     21\u001b[0m fold_preds \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[0;31mAttributeError\u001b[0m: type object 'Trainer' has no attribute 'Trainer'"
+      "### Testing Fold 1\n",
+      "#########################\n",
+      "### Testing Fold 2\n",
+      "#########################\n",
+      "### Testing Fold 3\n",
+      "#########################\n",
+      "### Testing Fold 4\n",
+      "#########################\n",
+      "### Testing Fold 5\n",
+      "\n",
+      "Test preds shape (1, 6)\n"
      ]
     }
    ],
@@ -371,7 +370,7 @@
     "        else f\"{config.trained_model_path}/EffNet_v{config.VER}_f{i}.ckpt\"\n",
     "    )\n",
     "    model = tr.load_from_checkpoint(\n",
-    "        ckpt_file, weight_file=config.trained_weight_file\n",
+    "        ckpt_file, weight_file=config.trained_weight_file,  use_kaggle_spectrograms=config.USE_KAGGLE_SPECTROGRAMS, use_eeg_spectrograms=config.USE_EEG_SPECTROGRAMS\n",
     "    )\n",
     "    model = model.to(device).eval()\n",
     "    fold_preds = []\n",
@@ -406,7 +405,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00067076966"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred[0][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -450,12 +469,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>3911565283</td>\n",
-       "      <td>0.161299</td>\n",
-       "      <td>0.020139</td>\n",
-       "      <td>0.001931</td>\n",
-       "      <td>0.354436</td>\n",
-       "      <td>0.141957</td>\n",
-       "      <td>0.320239</td>\n",
+       "      <td>0.24288</td>\n",
+       "      <td>0.045547</td>\n",
+       "      <td>0.000671</td>\n",
+       "      <td>0.304879</td>\n",
+       "      <td>0.044806</td>\n",
+       "      <td>0.361217</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -463,13 +482,13 @@
       ],
       "text/plain": [
        "       eeg_id  seizure_vote  lpd_vote  gpd_vote  lrda_vote  grda_vote  \\\n",
-       "0  3911565283      0.161299  0.020139  0.001931   0.354436   0.141957   \n",
+       "0  3911565283       0.24288  0.045547  0.000671   0.304879   0.044806   \n",
        "\n",
        "   other_vote  \n",
-       "0    0.320239  "
+       "0    0.361217  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +513,7 @@
        "dtype: float32"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
