--- a/brain/training.ipynb
+++ b/brain/training.ipynb
@@ -64,7 +64,7 @@
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
     "import pytorch_lightning as pl\n",
-    "from brain_solver import Helpers as hp, Trainer as tr, EEGDataset\n",
+    "from brain_solver import Helpers as hp, Trainer as tr, BrainModel as br, EEGDataset\n",
     "\n",
     "# Suppress warnings if desired\n",
     "import warnings\n",
@@ -102,7 +102,8 @@
    "source": [
     "from brain_solver import Config\n",
     "full_path = \"/home/osloup/NoodleNappers/brain/data/\"\n",
-    "config = Config(full_path,  full_path + \"out/\")\n",
+    "config = Config(full_path,  full_path + \"out/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False)\n",
+    "\n",
     "\n",
     "# full_path = \"/kaggle/input/\"\n",
     "# config = Config(full_path, \"/kaggle/working/\")\n",
@@ -358,16 +359,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There are 11138 spectrogram parquets\n",
-      "0 , 100 , 200 , 300 , 400 , 500 , 600 , 700 , 800 , 900 , 1000 , 1100 , 1200 , 1300 , 1400 , 1500 , 1600 , 1700 , 1800 , 1900 , 2000 , 2100 , 2200 , 2300 , 2400 , 2500 , 2600 , 2700 , 2800 , 2900 , 3000 , 3100 , 3200 , 3300 , 3400 , 3500 , 3600 , 3700 , 3800 , 3900 , 4000 , 4100 , 4200 , 4300 , 4400 , 4500 , 4600 , 4700 , 4800 , 4900 , 5000 , 5100 , 5200 , 5300 , 5400 , 5500 , 5600 , 5700 , 5800 , 5900 , 6000 , 6100 , 6200 , 6300 , 6400 , 6500 , 6600 , 6700 , 6800 , 6900 , 7000 , 7100 , 7200 , 7300 , 7400 , 7500 , 7600 , 7700 , 7800 , 7900 , 8000 , 8100 , 8200 , 8300 , 8400 , 8500 , 8600 , 8700 , 8800 , 8900 , 9000 , 9100 , 9200 , 9300 , 9400 , 9500 , 9600 , 9700 , 9800 , 9900 , 10000 , 10100 , 10200 , 10300 , 10400 , 10500 , 10600 , 10700 , 10800 , 10900 , 11000 , 11100 , 0, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 1100, 1200, 1300, 1400, 1500, 1600, 1700, 1800, 1900, 2000, 2100, 2200, 2300, 2400, 2500, 2600, 2700, 2800, 2900, 3000, 3100, 3200, 3300, 3400, 3500, 3600, 3700, 3800, 3900, 4000, 4100, 4200, 4300, 4400, 4500, 4600, 4700, 4800, 4900, 5000, 5100, 5200, 5300, 5400, 5500, 5600, 5700, 5800, 5900, 6000, 6100, 6200, 6300, 6400, 6500, 6600, 6700, 6800, 6900, 7000, 7100, 7200, 7300, 7400, 7500, 7600, 7700, 7800, 7900, 8000, 8100, 8200, 8300, 8400, 8500, 8600, 8700, 8800, 8900, 9000, 9100, 9200, 9300, 9400, 9500, 9600, 9700, 9800, 9900, 10000, 10100, 10200, 10300, 10400, 10500, 10600, 10700, 10800, 10900, 11000, 11100, 11200, 11300, 11400, 11500, 11600, 11700, 11800, 11900, 12000, 12100, 12200, 12300, 12400, 12500, 12600, 12700, 12800, 12900, 13000, 13100, 13200, 13300, 13400, 13500, 13600, 13700, 13800, 13900, 14000, 14100, 14200, 14300, 14400, 14500, 14600, 14700, 14800, 14900, 15000, 15100, 15200, 15300, 15400, 15500, 15600, 15700, 15800, 15900, 16000, 16100, 16200, 16300, 16400, 16500, 16600, 16700, 16800, 16900, 17000, "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spectrograms = hp.read_spectrograms(\n",
     "    config.data_spectograms,\n",
@@ -455,7 +447,7 @@
     {
      "data": {
       "text/plain": [
-       "31024"
+       "30978"
       ]
      },
      "execution_count": 13,
@@ -514,10 +506,7 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n"
+      "GPU available: False, used: False\n"
      ]
     },
     {
@@ -538,6 +527,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
@@ -564,7 +556,7 @@
     }
    ],
    "source": [
-    "all_oof, all_true, valid_loaders = hp.cross_validate_eeg(\n",
+    "all_oof, all_true, valid_loaders = br.cross_validate_eeg(\n",
     "    config,\n",
     "    train_data_preprocessed=train_data_preprocessed,\n",
     "    spectrograms=spectrograms,\n",
@@ -601,55 +593,19 @@
     }
    ],
    "source": [
-    "all_oof, all_true = hp.validate_model_across_folds(config, device, all_oof, all_true, valid_loaders)"
+    "all_oof, all_true = br.validate_model_across_folds(config, device, all_oof, all_true, valid_loaders)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for i in range(5):\n",
-    "#     print(\"#\" * 25)\n",
-    "#     print(f\"### Validating Fold {i+1}\")\n",
-    "\n",
-    "#     ckpt_file = (\n",
-    "#         f\"EffNet_v{config.VER}_f{i}.ckpt\"\n",
-    "#         if config.trained_model_path is None\n",
-    "#         else f\"{config.trained_model_path}/EffNet_v{config.VER}_f{i}.ckpt\"\n",
-    "#     )\n",
-    "#     model = tr.load_from_checkpoint(\n",
-    "#         ckpt_file, weight_file=config.trained_weight_file\n",
-    "#     )\n",
-    "#     model = model.to(device).eval()\n",
-    "#     with torch.inference_mode():  # Use inference mode for efficiency\n",
-    "#         for val_batch in valid_loaders[i]:\n",
-    "#             val_batch = val_batch.to(\n",
-    "#                 device\n",
-    "#             )  # Move validation batch to the correct device\n",
-    "#             oof = (\n",
-    "#                 torch.softmax(model(val_batch), dim=1).cpu().numpy()\n",
-    "#             )  # Get predictions\n",
-    "#             all_oof.append(oof)  # Collect predictions\n",
-    "#     del model\n",
-    "#     gc.collect()\n",
-    "#     torch.cuda.empty_cache()\n",
-    "\n",
-    "# all_oof = np.concatenate(all_oof)\n",
-    "# all_true = np.concatenate(all_true)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV Score KL-Div for EfficientNetB2 = 0.9107885142440294\n"
+      "CV Score KL-Div for EfficientNetB2 = 0.64318060973997\n"
      ]
     }
    ],
@@ -667,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +632,7 @@
        "0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
