fix: Little edits to the flow

--- a/brain/luppo_inter.ipynb
+++ b/brain/luppo_inter.ipynb
@@ -105,7 +105,7 @@
     "config = Config(full_path,  full_path + \"out/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False)\n",
     "\n",
     "# full_path = \"/kaggle/input/\"\n",
-    "# config = Config(full_path, \"/kaggle/working/\")\n",
+    "# config = Config(full_path, \"/kaggle/working/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False)\n",
     "\n",
     "import sys\n",
     "sys.path.append(full_path + 'kaggle-kl-div')\n",
