--- a/brain/training.ipynb
+++ b/brain/training.ipynb
@@ -106,7 +106,7 @@
     "\n",
     "\n",
     "# full_path = \"/kaggle/input/\"\n",
-    "# config = Config(full_path, \"/kaggle/working/\")\n",
+    "# config = Config(full_path, \"/kaggle/working/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False)\n",
     "\n",
     "import sys\n",
     "sys.path.append(full_path + 'kaggle-kl-div')\n",
@@ -447,7 +447,7 @@
     {
      "data": {
       "text/plain": [
-       "30978"
+       "30982"
       ]
      },
      "execution_count": 13,
@@ -506,7 +506,10 @@
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
       "HPU available: False, using: 0 HPUs\n",
-      "GPU available: False, used: False\n"
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n"
      ]
     },
     {
@@ -527,9 +530,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n",
       "GPU available: False, used: False\n",
       "TPU available: False, using: 0 TPU cores\n",
       "IPU available: False, using: 0 IPUs\n",
