Add possibility to train without pretrained model

--- a/brain/inference.ipynb
+++ b/brain/inference.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This notebook utilizes the custom `brain_solver` package for analyzing brain activity data. Our data sources include official datasets from Kaggle competitions and additional datasets for enhanced model training and evaluation.\n",
     "\n",
-    "This is the Interference notebook.\n",
+    "This is the Inference notebook.\n",
     "\n",
     "## Data Sources\n",
     "\n",
