--- a/brain/inference.ipynb
+++ b/brain/inference.ipynb
@@ -39,6 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !pip install d2l --no-index --find-links=file:///kaggle/input/d2l-package/d2l/\n",
     "# !pip install /kaggle/input/brain-solver/brain_solver-0.9.0-py3-none-any.whl"
    ]
   },
