Remove trainer class

--- a/brain/training.ipynb
+++ b/brain/training.ipynb
@@ -67,7 +67,7 @@
         "import torch\n",
         "from torch.utils.data import DataLoader\n",
         "import pytorch_lightning as pl\n",
-        "from brain_solver import Helpers as hp, Trainer as tr, BrainModel as br, EEGDataset\n",
+        "from brain_solver import Helpers as hp, BrainModel as br, EEGDataset\n",
         "from brain_solver import Wav2Vec2 as w2v\n",
         "\n",
         "# Suppress warnings if desired\n",
