--- a/brain/inference.ipynb
+++ b/brain/inference.ipynb
@@ -67,7 +67,7 @@
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
     "import pytorch_lightning as pl\n",
-    "from brain_solver import Helpers as hp, Trainer as tr, BrainModel as br, EEGDataset\n",
+    "from brain_solver import Helpers as hp, BrainModel as br, EEGDataset, Network\n",
     "\n",
     "# Suppress warnings if desired\n",
     "import warnings\n",
@@ -371,7 +371,16 @@
     "        if config.trained_model_path is None\n",
     "        else f\"{config.trained_model_path}/EffNet_v{config.VER}_f{i}.ckpt\"\n",
     "    )\n",
-    "    model = torch.load(config.full_path + \"trained-model-effnet-mlip9/\" + ckpt_file)\n",
+    "\n",
+    "    if config.trained_model_path is None:\n",
+    "        model = torch.load(config.full_path + \"trained-model-effnet-mlip9/\" + ckpt_file)\n",
+    "    else:\n",
+    "        model = Network(\n",
+    "            ckpt_file,\n",
+    "            config.USE_KAGGLE_SPECTROGRAMS,\n",
+    "            config.USE_EEG_SPECTROGRAMS,\n",
+    "            validation=True,\n",
+    "        )\n",
     "    model = model.to(device).eval()\n",
     "    fold_preds = []\n",
     "\n",
