Add fine tune switches

--- a/brain/inference.ipynb
+++ b/brain/inference.ipynb
@@ -368,11 +368,11 @@
     "\n",
     "    ckpt_file = (\n",
     "        f\"EffNet_version{config.VER}_fold{i+1}.pth\"\n",
-    "        if config.trained_model_path is None\n",
+    "        if config.trained_model_path is None or config.FINE_TUNE\n",
     "        else f\"{config.trained_model_path}/EffNet_v{config.VER}_f{i}.ckpt\"\n",
     "    )\n",
     "\n",
-    "    if config.trained_model_path is None:\n",
+    "    if config.trained_model_path is None or config.FINE_TUNE:\n",
     "        model = torch.load(config.full_path + \"trained-model-effnet-mlip9/\" + ckpt_file)\n",
     "    else:\n",
     "        model = Network(\n",
