Add trainer back

--- a/brain/inference.ipynb
+++ b/brain/inference.ipynb
@@ -67,7 +67,7 @@
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
     "import pytorch_lightning as pl\n",
-    "from brain_solver import Helpers as hp, BrainModel as br, EEGDataset, Network\n",
+    "from brain_solver import Helpers as hp, BrainModel as br, EEGDataset, Network, Trainer as tr\n",
     "\n",
     "# Suppress warnings if desired\n",
     "import warnings\n",
@@ -375,12 +375,9 @@
     "    if config.trained_model_path is None or config.FINE_TUNE:\n",
     "        model = torch.load(config.full_path + \"trained-model-effnet-mlip9/\" + ckpt_file)\n",
     "    else:\n",
-    "        model = Network(\n",
-    "            ckpt_file,\n",
-    "            config.USE_KAGGLE_SPECTROGRAMS,\n",
-    "            config.USE_EEG_SPECTROGRAMS,\n",
-    "            validation=True,\n",
-    "        )\n",
+    "        model = tr.load_from_checkpoint(\n",
+    "        ckpt_file, weight_file=config.trained_weight_file,  use_kaggle_spectrograms=config.USE_KAGGLE_SPECTROGRAMS, use_eeg_spectrograms=config.USE_EEG_SPECTROGRAMS\n",
+    "    )\n",
     "    model = model.to(device).eval()\n",
     "    fold_preds = []\n",
     "\n",
