First attempt on fine tuning

--- a/brain/training.ipynb
+++ b/brain/training.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -54,7 +54,7 @@
               "device(type='cuda')"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -67,7 +67,7 @@
         "import torch\n",
         "from torch.utils.data import DataLoader\n",
         "import pytorch_lightning as pl\n",
-        "from brain_solver import Helpers as hp, Trainer as tr, BrainModel as br, EEGDataset\n",
+        "from brain_solver import Helpers as hp, Trainer as tr, BrainModel as br, EEGDataset, Network\n",
         "from brain_solver import Wav2Vec2 as w2v\n",
         "\n",
         "# Suppress warnings if desired\n",
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "tags": []
       },
@@ -107,7 +107,7 @@
         "from brain_solver import Config\n",
         "# full_path = \"/home/osloup/NoodleNappers/brain/data/\"\n",
         "full_path = \"C:/Users/tygof/Documents/Semester 8/MLiP/NoodleNappers/brain/data/\"\n",
-        "config = Config(full_path,  full_path + \"out/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False, USE_PRETRAINED_MODEL=False, FINE_TUNE=False)\n",
+        "config = Config(full_path,  full_path + \"out/\", USE_EEG_SPECTROGRAMS=True, USE_KAGGLE_SPECTROGRAMS=True, should_read_brain_spectograms=False, should_read_eeg_spectrogram_files=False, USE_PRETRAINED_MODEL=True, FINE_TUNE=True)\n",
         "\n",
         "\n",
         "# full_path = \"/kaggle/input/\"\n",
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -136,7 +136,7 @@
               "2024"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -330,7 +330,7 @@
               "4  0.000000      0.00   0.000000   0.000000    1.000000  Other  "
             ]
           },
-          "execution_count": 6,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -341,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -361,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -377,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -396,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -408,7 +408,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -440,16 +440,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "61856"
+              "30945"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -461,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -471,7 +471,15 @@
             "#########################\n",
             "### Fold 1\n",
             "### Train size: 13671, Valid size: 3418\n",
-            "#########################\n"
+            "#########################\n",
+            "Epoch:  1\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "  0%|          | 0/428 [00:00<?, ?it/s]"
           ]
         }
       ],
