--- a/brain/inference.ipynb
+++ b/brain/inference.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Brain Solver Python Interference Notebook\n",
+    "# Brain Solver Python Inference Notebook\n",
     "\n",
     "This notebook utilizes the custom `brain_solver` package for analyzing brain activity data. Our data sources include official datasets from Kaggle competitions and additional datasets for enhanced model training and evaluation.\n",
     "\n",
